# RCOMage

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  TODO  autogen.sh  common.mk  configscan.c  configscan.h  configure.ac  general.c  general.h  globdefs.c  kakaroto-indent  main.c  rcodump.c  rcodump.h  rcofile.h  rcomain.c  rcomain.h  rcoreader.c  rcowriter.c  rlzpack.c  rlzpack.h  strfuncs.h  vaghandler.c  vaghandler.h  vsmx.c  vsmx.h  xml.h  xmlread.c  xmlwrite.c
7z/: 7z.h  7zdeflate.cc  Makefile  Makefile.am  Portable.h
data/: miscmap.ini  tagmap.ini
src/: Makefile.am  configscan.c  general.c  rcodump.c  rlzpack.c  vsmx.c  vsmx.h  xmlread.c
zlib/: Makefile  Makefile.bak
