# Makefile.am for RCOMage
#
# (C) Youness Alaoui (KaKaRoTo)
#
# Licensed under LGPL 2.1. See file COPYING.

SUBDIRS = 7z \
          src

rcomagedir = $(pkgdatadir)

rcomage_DATA = \
	data/animattribdef-ps3.ini \
	data/animattribdef-psp.ini \
	data/miscmap.ini \
	data/objattribdef-ps3.ini \
	data/objattribdef-psp.ini \
	data/tagmap.ini
