# Makefile.am for RCOMage/7z
#
# (C) Youness Alaoui (KaKaRoTo)
#
# Licensed under LGPL 2.1. See file COPYING.

include $(top_srcdir)/common.mk

noinst_LTLIBRARIES = lib7z.la

lib7z_la_SOURCES = \
	7z.h \
	7zdeflate.cc \
	CRC.cc \
	CRC.h  \
	DeflateEncoder.cc \
	DeflateEncoder.h \
	HuffmanEncoder.cc \
	HuffmanEncoder.h  \
	IInOutStreams.cc \
	IInOutStreams.h \
	LSBFEncoder.cc \
	LSBFEncoder.h \
	OutByte.cc \
	OutByte.h \
	WindowIn.cc \
	WindowIn.h \
	Const.h \
	Portable.h \
	BinTree3ZMain.h \
	BinTreeMFMain.h \
	BinTree.h \
	BinTreeMain.h \
	BinTree3Z.h \
	BinTreeMF.h
